<resources>
    <string name="app_name">To-Do List</string>
    <string name="title">What\'s On Your Agenda?</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="my_to_do_list">My To Do List</string>
    <string name="add">Add</string>
    <string name="add_an_item">Add an Item</string>
    <string name="darkmode">Dark Mode</string>
</resources>